# GeographicLib

./: CMakeLists.txt  package.xml
dotnet/NETGeographicLib/: Accumulator.cpp  Accumulator.h  AlbersEqualArea.cpp  AlbersEqualArea.h  AssemblyInfo.cpp  AzimuthalEquidistant.cpp  AzimuthalEquidistant.h  CassiniSoldner.cpp  CassiniSoldner.h  CircularEngine.cpp  CircularEngine.h  DMS.cpp  DMS.h  Ellipsoid.cpp  Ellipsoid.h  EllipticFunction.cpp  EllipticFunction.h  GARS.cpp  GARS.h  GeoCoords.cpp  GeoCoords.h  Geocentric.cpp  Geocentric.h  Geodesic.cpp  Geodesic.h  GeodesicExact.cpp  GeodesicExact.h  GeodesicLine.cpp  GeodesicLine.h  GeodesicLineExact.cpp  GeodesicLineExact.h  Geohash.cpp  Geohash.h  Geoid.cpp  Geoid.h  Georef.cpp  Georef.h  Gnomonic.cpp  Gnomonic.h  GravityCircle.cpp  (+39 more)
dotnet/examples/ManagedCPP/: example-Accumulator.cpp  example-AlbersEqualArea.cpp  example-AzimuthalEquidistant.cpp  example-CassiniSoldner.cpp  example-CircularEngine.cpp  example-DMS.cpp  example-Ellipsoid.cpp  example-EllipticFunction.cpp  example-GARS.cpp  example-GeoCoords.cpp  example-Geocentric.cpp  example-Geodesic-small.cpp  example-Geodesic.cpp  example-GeodesicExact.cpp  example-GeodesicLine.cpp  example-GeodesicLineExact.cpp  example-Geohash.cpp  example-Geoid.cpp  example-Georef.cpp  example-Gnomonic.cpp  example-GravityCircle.cpp  example-GravityModel.cpp  example-LambertConformalConic.cpp  example-LocalCartesian.cpp  example-MGRS.cpp  example-MagneticCircle.cpp  example-MagneticModel.cpp  example-NormalGravity.cpp  example-OSGB.cpp  example-PolarStereographic.cpp  example-PolygonArea.cpp  example-Rhumb.cpp  example-RhumbLine.cpp  example-SphericalHarmonic.cpp  example-SphericalHarmonic1.cpp  example-SphericalHarmonic2.cpp  example-TransverseMercator.cpp  example-TransverseMercatorExact.cpp  example-UTMUPS.cpp
examples/: GeoidToGTX.cpp  JacobiConformal.cpp  example-Accumulator.cpp  example-AlbersEqualArea.cpp  example-AzimuthalEquidistant.cpp  example-CassiniSoldner.cpp  example-CircularEngine.cpp  example-Constants.cpp  example-DMS.cpp  example-Ellipsoid.cpp  example-EllipticFunction.cpp  example-GARS.cpp  example-GeoCoords.cpp  example-Geocentric.cpp  example-Geodesic-small.cpp  example-Geodesic.cpp  example-GeodesicExact.cpp  example-GeodesicLine.cpp  example-GeodesicLineExact.cpp  example-GeographicErr.cpp  example-Geohash.cpp  example-Geoid.cpp  example-Georef.cpp  example-Gnomonic.cpp  example-GravityCircle.cpp  example-GravityModel.cpp  example-LambertConformalConic.cpp  example-LocalCartesian.cpp  example-MGRS.cpp  example-MagneticCircle.cpp  example-MagneticModel.cpp  example-Math.cpp  example-NearestNeighbor.cpp  example-NormalGravity.cpp  example-OSGB.cpp  example-PolarStereographic.cpp  example-PolygonArea.cpp  example-Rhumb.cpp  example-RhumbLine.cpp  example-SphericalEngine.cpp  (+8 more)
include/geographic_lib/: Accumulator.hpp  AlbersEqualArea.hpp  AzimuthalEquidistant.hpp  CMakeLists.txt  CassiniSoldner.hpp  CircularEngine.hpp  Config-ac.h.in  Config.h.in  Constants.hpp  DMS.hpp  Ellipsoid.hpp  EllipticFunction.hpp  GARS.hpp  GeoCoords.hpp  Geocentric.hpp  Geodesic.hpp  GeodesicExact.hpp  GeodesicLine.hpp  GeodesicLineExact.hpp  Geohash.hpp  Geoid.hpp  Georef.hpp  Gnomonic.hpp  GravityCircle.hpp  GravityModel.hpp  LambertConformalConic.hpp  LocalCartesian.hpp  MGRS.hpp  MagneticCircle.hpp  MagneticModel.hpp  Math.hpp  NearestNeighbor.hpp  NormalGravity.hpp  OSGB.hpp  PolarStereographic.hpp  PolygonArea.hpp  Rhumb.hpp  SphericalEngine.hpp  SphericalHarmonic.hpp  SphericalHarmonic1.hpp  (+5 more)
legacy/C/: direct.c  geodesic.c  geodesic.h  geodtest.c  inverse.c  planimeter.c
src/: Accumulator.cpp  AlbersEqualArea.cpp  AzimuthalEquidistant.cpp  CMakeLists.txt  CassiniSoldner.cpp  CircularEngine.cpp  DMS.cpp  Ellipsoid.cpp  EllipticFunction.cpp  GARS.cpp  GeoCoords.cpp  Geocentric.cpp  Geodesic.cpp  GeodesicExact.cpp  GeodesicExactC4.cpp  GeodesicLine.cpp  GeodesicLineExact.cpp  Geohash.cpp  Geoid.cpp  Georef.cpp  Gnomonic.cpp  GravityCircle.cpp  GravityModel.cpp  LambertConformalConic.cpp  LocalCartesian.cpp  MGRS.cpp  MagneticCircle.cpp  MagneticModel.cpp  Makefile.am  Makefile.in  Makefile.mk  Math.cpp  NormalGravity.cpp  OSGB.cpp  PolarStereographic.cpp  PolygonArea.cpp  Rhumb.cpp  SphericalEngine.cpp  TransverseMercator.cpp  TransverseMercatorExact.cpp  (+2 more)
tools/: CartConvert.cpp  ConicProj.cpp  GeoConvert.cpp  GeodSolve.cpp  GeodesicProj.cpp  GeoidEval.cpp  Gravity.cpp  MagneticField.cpp  Makefile.am  Makefile.in  Makefile.mk  Planimeter.cpp  RhumbSolve.cpp  TransverseMercatorProj.cpp  geographiclib-get-geoids.sh  geographiclib-get-gravity.sh  geographiclib-get-magnetic.sh  tests.cmake
wrapper/C/: cgeoid.cpp  cgeoid.h  geoidtest.c
wrapper/matlab/: geodesicinverse.cpp
wrapper/python/: PyGeographicLib.cpp
